--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
            <textarea input type="text"  formControlName="content" rows="10" cols = 60  > </textarea>
           
            <br><br>
-           <button (click)="onClickDo()" > SUBMIT </button>
+           <button type="button" (click)="onClickDo()" > SUBMIT </button>
            
        </form>  
        </div>
